--- a/typography_demo/index.html
+++ b/typography_demo/index.html
@@ -33,7 +33,7 @@
 	
 		<div class="wrapper">
 			
-			<section class="intro">
+			<section class="intro" id="intro1">
 			
 				<blockquote>Lasagne won't save you, you're still going to have to talk to people.</blockquote>
 				<a href="http://twitter.com/#!/peepshowquotes/status/5226500799">Jeremy Usbourne<span>Peep Show</span></a>
